# minimun_cmake_opencv_glog_gflag

./: CMakeLists.txt  README.md
src/: main.cpp
