
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(ShelfDetect)

SET(CMAKE_CXX_STANDARD 11)

SET(SOURCE_FILES src/main.cpp)
FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE(cmake/FindGlog.cmake)
INCLUDE(cmake/FindGFlags.cmake)

ADD_EXECUTABLE(ProdDetector ${SOURCE_FILES})
TARGET_LINK_LIBRARIES( ProdDetector ${OpenCV_LIBS} ${GLOG_LIBRARY} ${GFLAGS_LIBRARY} )

